# gs_guest_lecture

./: LICENSE  README.md  pyproject.toml
notebooks/: 01_galpy_basics.ipynb  02_where_do_stars_call_home.ipynb  03_oh_to_be_young_again.ipynb  04_stars_of_a_feather.ipynb
